[package]
name = "rust-rogue"
version = "0.1.0"
authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]
build = "build.rs"

[dependencies]
itertools = "0.4"
piston = "0.17"
piston_window = "0.34"
piston2d-graphics = "0.13"
pistoncore-sdl2_window = "0.23.0"
piston2d-opengl_graphics = "0.23"
rand = "0.3"
find_folder = "0.3.0"
