[package]
name = "rust-rogue"
version = "0.1.0"
authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]
build = "build.rs"

[dependencies]
itertools = "0.4"
piston = "0.18"
piston_window = "0.38"
piston2d-graphics = "0.13"
pistoncore-sdl2_window = "0.25.0"
pistoncore-glutin_window = "0.21.0"
pistoncore-glfw_window = "0.18.0"
piston2d-opengl_graphics = "0.23"
rand = "0.3"
find_folder = "0.3.0"
